--- a/views/watch.ejs
+++ b/views/watch.ejs
@@ -3,20 +3,20 @@
 <head style="background-color: #121212;" itemscope itemtype="http://schema.org/WebSite">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="_token" content="eAAlpzdTcyBO2HadP2nOjfoXNLbHRo6D81wh7HH2">
-<title>Watch <%- details.name %> on AnimeEZ</title>
-<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
-<meta name="keywords" content="<%- details.name %>, English Subbed/Dubbed on AnimeEZ">
+<title>Watch <%- details.name %> on a2zAni.me</title>
+<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
+<meta name="keywords" content="<%- details.name %>, English Subbed/Dubbed on a2zAni.me">
  <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
    <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
   <script type="text/javascript" src="https://animeez.tk/bower_components/crypto-js/crypto-js.js"></script>
-<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
-<meta name="keywords" content="Dolls Frontline Dub, English Subbed/Dubbed on AnimeEZ">
+<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
+<meta name="keywords" content="Dolls Frontline Dub, English Subbed/Dubbed on a2zAni.me">
 <meta itemprop="image" content=""/>
 <link rel="canonical" href="/" />
 <meta property='og:type' content='video' />
 <meta property='og:url' content='/' />
-<meta property='og:title' content="Watch Dolls Frontline Dub  on AnimeEZ" />
-<meta property='og:description' content="Watch best high-quality episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
+<meta property='og:title' content="Watch Dolls Frontline Dub  on a2zAni.me" />
+<meta property='og:description' content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 
 
@@ -28,10 +28,10 @@
 <meta name="msapplication-TileColor" content="#201f1f" />
 <meta name="theme-color" content="#201f1f" />
 <meta property="twitter:card" content="summary"/>
-<meta property="twitter:title" content="Watch Dolls Frontline Dub English Subbed/Dubbed online at AnimeEZ"/>
-<meta property="twitter:description" content="Watch Dolls Frontline Dub online at AnimeEZ"/>
+<meta property="twitter:title" content="Watch Dolls Frontline Dub English Subbed/Dubbed online at a2zAni.me"/>
+<meta property="twitter:description" content="Watch Dolls Frontline Dub online at a2zAni.me"/>
 
-<link rel="stylesheet" href="https://animeez.tk/css/template.css">
+<link rel="stylesheet" href="https://a2zAni.me/css/template.css">
 <link href="https://animeez.tk/css/css" rel="stylesheet" />
 
   <script
@@ -40,7 +40,7 @@
   ></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://animeez.tk/js/js"></script>
+<script async src="https://a2zAni.me/js/js"></script>
 
 
 </head>
@@ -53,9 +53,9 @@
 		<div id="uk-main-nav" class="container w-full">
 			<div class="flex bod">
 				<div class="uk-navbar-left">
-					<a href="https://animeez.tk/" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://animeez.tk/img/logo.png" class="uk-svg" alt="AnimeEZ" title="AnimeEZ">
+					<a href="https://a2zAni.me/" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://a2zAni.me/img/logo.png" class="uk-svg" alt="a2zAni.me" title="a2zAni.me">
 						<h2 class="is-shown-page-false" itemprop="headline">
-							<strong>AnimeEZ</strong>
+							<strong>a2zAni.me</strong>
 						</h2>
 					</a>
 
