--- a/views/watch.ejs
+++ b/views/watch.ejs
@@ -8,7 +8,7 @@
 <meta name="keywords" content="<%- details.name %>, English Subbed/Dubbed on a2zAni.me">
  <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
    <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
-  <script type="text/javascript" src="https://animeez.tk/bower_components/crypto-js/crypto-js.js"></script>
+  <script type="text/javascript" src="https://a2zAni.me/bower_components/crypto-js/crypto-js.js"></script>
 <meta name="description" content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
 <meta name="keywords" content="Dolls Frontline Dub, English Subbed/Dubbed on a2zAni.me">
 <meta itemprop="image" content=""/>
@@ -32,7 +32,7 @@
 <meta property="twitter:description" content="Watch Dolls Frontline Dub online at a2zAni.me"/>
 
 <link rel="stylesheet" href="https://a2zAni.me/css/template.css">
-<link href="https://animeez.tk/css/css" rel="stylesheet" />
+<link href="https://a2zAni.me/css/css" rel="stylesheet" />
 
   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -61,7 +61,7 @@
 
 					<ul class="uk-navbar-nav animate-me" id="mobilemenu">
 						<li>
-						<a href="https://animeez.tk" class="">Home</a>
+						<a href="https://a2zAni.me" class="">Home</a>
 						</li>
 					
 						
@@ -70,7 +70,7 @@
 			<div class="uk-navbar-right">
 				<ul class="uk-navbar-nav">
 					<li class="search-bar">
-			<form action="https://animeez.tk/search" method="get">
+			<form action="https://a2zAni.me/search" method="get">
 							<div id="searchx" class="auto-complete-cont searchx">
 								<div class="auto-complete form-inline animate-me" tabindex="-1" >								 
 								<input class="nav-search" placeholder="Search... " id="keyword" name="keyword" type="text" autocomplete="off" required>
@@ -118,7 +118,7 @@
 			</div>
 		</div>
 	</nav>
-  <script src="https://animeez.tk/js/script.js"></script>
+  <script src="https://a2zAni.me/js/script.js"></script>
 <div class="uk-sticky-placeholder">
 </div>
 <div id="menu" class="">
@@ -128,7 +128,7 @@
 	</div>
 	<ul class="menu">
 		<li id="menu-item-18459" class="fa fa-home menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-18459">
-			<a href="https://animeez.tk/" aria-current="page">Home</a>
+			<a href="https://a2zAni.me/" aria-current="page">Home</a>
 		</li>
 
 	</ul>
@@ -141,15 +141,15 @@
 			<div class="theatre">
               <div class="breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
 <span class="breadcrumb-link-wrap" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-<a class="breadcrumb-link" href="https://animeez.tk" itemprop="item">
-<span class="breadcrumb-link-text-wrap" itemprop="name">AnimeEZ
+<a class="breadcrumb-link" href="https://a2zAni.me" itemprop="item">
+<span class="breadcrumb-link-text-wrap" itemprop="name">a2zAni.me
 </span>
 </a>
 </span>
             
 
 <span aria-label="breadcrumb separator"> /
-</span><a href="https://animeez.tk/anime/<%- details.name %>"><%- details.name%></a>
+</span><a href="https://a2zAni.me/anime/<%- details.name %>"><%- details.name%></a>
 <span aria-label="breadcrumb separator"> 
 </span>  </div>		<div class="your-computer-has-a-virus">Watch  </div>
 				<div class="theatre-settings">
@@ -183,7 +183,7 @@
 </div>
 <div class="col-sm-3">
 <div class="dropup" id="qualityitem">
-<a id="fansubMenu" class="btn btn-secondary btn-block dropdown-toggle" href="https://animeez.tk/anime/<%-details.name %>">Anime
+<a id="fansubMenu" class="btn btn-secondary btn-block dropdown-toggle" href="https://a2zAni.me/anime/<%-details.name %>">Anime
 </a> </div>
 </div>
 <% if(details.previous)  { %>
@@ -208,7 +208,7 @@
 			<h4>Episode List
 			</h4> :
 			<i>
-			<a href="https://animeez.tk/anime/<%- details.name %>"><%- details.name %></a>
+			<a href="https://a2zAni.me/anime/<%- details.name %>"><%- details.name %></a>
 			</i>
 			<br>
 			
@@ -255,7 +255,7 @@
 	</section>
 	<section class="uk-background footer-bottom py-5">
 		<div class="uk-container text-sm uk-container-large flexo">
-			<div class="copyright"> Copyright © 2022 AnimeEZ, LLC. All Rights Reserved</div>
+			<div class="copyright"> Copyright © 2022 a2zAni.me, LLC. All Rights Reserved</div>
 		</div>
 	</section>
 </footer><script type="text/javascript">
