--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,15 @@
 <head style="background-color: #121212;" itemscope itemtype="http://schema.org/WebSite">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="_token" content="eAAlpzdTcyBO2HadP2nOjfoXNLbHRo6D81wh7HH2">
-<title>AnimeEZ -  Watch High Quality Anime Online</title>
-<meta name="description" content="Watch high-quality Anime Episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
+<title>a2zAni.me -  Watch High Quality Anime Online</title>
+<meta name="description" content="Watch high-quality Anime Episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
 <link rel="canonical" href="/" />
 <meta property='og:type' content='website' />
 <meta property='og:url' content='/' />
-<meta property='og:title' content="AnimeEZ - Watch High Quality Anime Online" />
-<meta property='og:description' content="Watch high-quality Anime Episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
+<meta property='og:title' content="a2zAni.me - Watch High Quality Anime Online" />
+<meta property='og:description' content="Watch high-quality Anime Episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
 <meta property="og:image" content="img/logo.png" />
- <meta name="keywords" content="AnimeEZ, flixanime, animefox, AnimeEZ.io, anime, watch anime online, subbed anime, dubbed anime, stream anime, free anime, gogoanime">
+ <meta name="keywords" content="a2zAni.me, flixanime, animefox, a2zAni.me, anime, watch anime online, subbed anime, dubbed anime, stream anime, free anime, gogoanime">
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
 <link rel='icon' href='favicon.ico' type='image/x-icon'>
@@ -19,9 +19,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-TileColor" content="#201f1f" />
 <meta name="theme-color" content="#201f1f" />
-<link rel="stylesheet" href="https://animeez.tk/css/template.css">
+<link rel="stylesheet" href="https://a2zAni.me/css/template.css">
 
-<script src="https://animeez.tk/js/jquery-1.12.4.min.js"></script>
+<script src="https://a2zAni.me/js/jquery-1.12.4.min.js"></script>
 
 
 
@@ -37,15 +37,15 @@
 		<div id="uk-main-nav" class="container w-full">
 			<div class="flex bod">
 				<div class="uk-navbar-left">
-					<a href="https://animeez.tk" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://animeez.tk/img/logo.png" class="uk-svg" alt="AnimeEZ" title="AnimeEZ">
+					<a href="https://a2zAni.me" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://a2zAni.me/img/logo.png" class="uk-svg" alt="a2zAni.me" title="a2zAni.me">
 						<h2 class="is-shown-page-false" itemprop="headline">
-							<strong>AnimeEZ</strong>
+							<strong>a2zAni.me</strong>
 						</h2>
 					</a>
 
 					<ul class="uk-navbar-nav animate-me" id="mobilemenu">
 						<li>
-						<a href="https://animeez.tk" class="">Home</a>
+						<a href="https://a2zAni.me" class="">Home</a>
 						</li>
 				
 					</ul>
@@ -53,7 +53,7 @@
 			<div class="uk-navbar-right">
 				<ul class="uk-navbar-nav">
 					<li class="search-bar">
-						<form action="https://animeez.tk/search" method="get">
+						<form action="https://a2zAni.me/search" method="get">
 							<div id="searchx" class="auto-complete-cont searchx">
 								<div class="auto-complete form-inline animate-me" tabindex="-1" >								 
 								<input class="nav-search" placeholder="Search... " id="keyword" name="keyword" type="text" autocomplete="off" required>
@@ -70,7 +70,7 @@
 
 					</li>
 					<li>
-						<a href="https://animeez.tk/#" class="searcho" id="searcho" onclick="mobile()">
+						<a href="https://a2zAni.me/#" class="searcho" id="searcho" onclick="mobile()">
 							<svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M208 80a128 128 0 1 1-90.51 37.49A127.15 127.15 0 0 1 208 80m0-80C93.12 0 0 93.12 0 208s93.12 208 208 208 208-93.12 208-208S322.88 0 208 0z"></path><path class="fa-primary" fill="currentColor" d="M504.9 476.7L476.6 505a23.9 23.9 0 0 1-33.9 0L343 405.3a24 24 0 0 1-7-17V372l36-36h16.3a24 24 0 0 1 17 7l99.7 99.7a24.11 24.11 0 0 1-.1 34z"></path></g>
 							</svg>
 						</a>
