--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
 	</div>
 	<ul class="menu">
 		<li id="menu-item-18459" class="fa fa-home menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-18459">
-			<a href="https://animeez.tk/" aria-current="page">Home</a>
+			<a href="https://a2zAni.me/" aria-current="page">Home</a>
 		</li>
 
 	</ul>
@@ -102,7 +102,7 @@
  </script>
 </header><main role="main" class="main-content">
 <div class="bod"></div>
-<article class="rand animate-me"><div class="erc-hero-card" id="random"><div class="erc-hero-card-background-overlay bottom-angled"><span class="background-gradient"></span><img class="background-image" src="https://animecdn.sbs/banner/black-clover-tv.jpg" alt="Black Clover (TV)"></div><div class="foreground"><div class="main-image-wrapper-link"><div class="main-image-wrapper"><a class="poster-hover-layer" href="https://animeez.tk/anime/black-clover-tv"><div class="play-icon"><svg class="svg-inline--fa fa-play-circle fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path><path class="fa-primary" fill="currentColor" d="M371.7 280l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path></g></svg></div><h4 class="text-sm font-bold">Watch</h4></a><img class="c-content-image" src="https://animecdn.sbs/cover/black-clover-tv.png" alt="Black Clover (TV)"></div></div><section class="info"><a class="title-link" href="https://animeez.tk//anime/black-clover-tv"><h3 class="title">Black Clover (TV)</h3></a><div class="additional-information"><div class="c-meta-tags media-tag-group"><span class="c-meta-tags__type">Synonyms</span><span class="c-meta-tags__language"><span><span></span><span>ブラッククローバー</span></span></div></div><p class="description">Asta and Yuno were abandoned together at the same church and have been inseparable since. As children, they promised that they would compete against each other to see who would become the next Emperor Magus. However, as they grew up, some differences between them became plain. Yuno was a genius with magic, with amazing power and control, while Asta could not use magic at all, and tried to make up for his lack by training physically. When they received their Grimoires at age 15, Yuno got a spectacular book with a four-leaf clover (most people receive a three-leaf-clover), while Asta received nothing at all. However, when Yuno was threatened, the truth about Asta's power was revealed, he received a five-leaf clover Grimoire, a "black clover"! Now the two friends are heading out in the world, both seeking the same goal!</p></section></div></div></article>
+<article class="rand animate-me"><div class="erc-hero-card" id="random"><div class="erc-hero-card-background-overlay bottom-angled"><span class="background-gradient"></span><img class="background-image" src="https://animecdn.sbs/banner/black-clover-tv.jpg" alt="Black Clover (TV)"></div><div class="foreground"><div class="main-image-wrapper-link"><div class="main-image-wrapper"><a class="poster-hover-layer" href="https://a2zAni.me/anime/black-clover-tv"><div class="play-icon"><svg class="svg-inline--fa fa-play-circle fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path><path class="fa-primary" fill="currentColor" d="M371.7 280l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path></g></svg></div><h4 class="text-sm font-bold">Watch</h4></a><img class="c-content-image" src="https://animecdn.sbs/cover/black-clover-tv.png" alt="Black Clover (TV)"></div></div><section class="info"><a class="title-link" href="https://a2zAni.me//anime/black-clover-tv"><h3 class="title">Black Clover (TV)</h3></a><div class="additional-information"><div class="c-meta-tags media-tag-group"><span class="c-meta-tags__type">Synonyms</span><span class="c-meta-tags__language"><span><span></span><span>ブラッククローバー</span></span></div></div><p class="description">Asta and Yuno were abandoned together at the same church and have been inseparable since. As children, they promised that they would compete against each other to see who would become the next Emperor Magus. However, as they grew up, some differences between them became plain. Yuno was a genius with magic, with amazing power and control, while Asta could not use magic at all, and tried to make up for his lack by training physically. When they received their Grimoires at age 15, Yuno got a spectacular book with a four-leaf clover (most people receive a three-leaf-clover), while Asta received nothing at all. However, when Yuno was threatened, the truth about Asta's power was revealed, he received a five-leaf clover Grimoire, a "black clover"! Now the two friends are heading out in the world, both seeking the same goal!</p></section></div></div></article>
   
   
   <div class="container content">
@@ -116,14 +116,14 @@
 			</div>
 		</div>
 	</div>
-  <script src="https://animeez.tk/js/script.js"></script>
+  <script src="https://a2zAni.me/js/script.js"></script>
 <div id="episodes" class="uk-light grid home-release">
 <% recent.forEach((item) => { %>
   
 						<div class="release-episodes shadow hover:shadow-md uk-scrollspy-inview uk-animation-fade animate-me">
 		<div class="video-card">		
 			<div class="video-card-image">
-				<a href="https://animeez.tk/watch<%- item.anime_id%>" class="poster-hover-layer">
+				<a href="https://a2zAni.me/watch<%- item.anime_id%>" class="poster-hover-layer">
 					<div class="play-icon">
 						<svg class="svg-inline--fa fa-play-circle fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path><path class="fa-primary" fill="currentColor" d="M371.7 280l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path></g>
 						</svg>
@@ -131,12 +131,12 @@
 				</a>
     
 				<p class="type-dub">SUB</p>
-				<a href="https://animeez.tk/watch/<%- item.anime_id%>"><img class="img-fluid" alt="<%- item.name%>" src="<%- item.img_url %>">
+				<a href="https://a2zAni.me/watch/<%- item.anime_id%>"><img class="img-fluid" alt="<%- item.name%>" src="<%- item.img_url %>">
 				</a>
 			</div>
 			<div class="video-card-body">
 				<div class="video-title">
-					<a href="https://animeez.tk/watch/<%- item.anime_id%>">
+					<a href="https://a2zAni.me/watch/<%- item.anime_id%>">
 						<h3><%- item.episode %>					
 							<div class="video-page"><%- item.name %></div>
 						</h3>
@@ -159,7 +159,7 @@
 			</div>
 		</div>
 	</div>
-  <script src="https://animeez.tk/js/script.js"></script>
+  <script src="https://a2zAni.me/js/script.js"></script>
 <div id="episodes" class="uk-light grid home-release">
 <% recentm.forEach((item) => { %>
   
@@ -196,7 +196,7 @@ function dhvit(chno, id) {
  
            const form = document.createElement('form');
   form.method = 'POST';
-  form.action = `https://animeez.tk/read/${id}`;
+  form.action = `https://a2zAni.me/read/${id}`;
      const params = {
      chapter: chno
      } 
@@ -229,7 +229,7 @@ function dhvit(chno, id) {
 <div id="episodes" class="uk-light grid home-release">
 <% trend.forEach((det) => { %>
                                     	<article class="bs relative animate-me">
-		<a class="poster-hover-layer" href="https://animeez.tk/anime/<%- det.anime_id %>">
+		<a class="poster-hover-layer" href="https://a2zAni.me/anime/<%- det.anime_id %>">
 		<div class="play-icon"><svg class="svg-inline--fa fa-play-circle fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path><path class="fa-primary" fill="currentColor" d="M371.7 280l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path></g>
 		</svg>
 		</div>
@@ -237,7 +237,7 @@ function dhvit(chno, id) {
 		</a>
 	<div class="bsx" itemscope="">
   <%- console.log(det.name) %>
-		<a class="cona" href="https://animeez.tk/anime/<%- det.anime_id %>">
+		<a class="cona" href="https://a2zAni.me/anime/<%- det.anime_id %>">
 			<div class="limit">
 			<img class="coveri coveris" src="<%- det.img_url %>" itemprop="image" alt="Kimetsu no Yaiba: Yuukaku-hen">
 				<div class="tt"><h3><%- det.name %></h3>
@@ -265,7 +265,7 @@ function dhvit(chno, id) {
 	<section class="uk-background footer-bottom py-5">
 		<div class="uk-container text-sm uk-container-large flexo">
      
-			<div class="copyright"> Copyright © 2022 AnimeEZ, LLC. All Rights Reserved</div>
+			<div class="copyright"> Copyright © 2022 a2zAni.me, LLC. All Rights Reserved</div>
 		</div>
 	</section>
 </footer>	<!-- end footer -->
