--- a/views/anime.ejs
+++ b/views/anime.ejs
@@ -3,12 +3,12 @@
 <head style="background-color: #121212;" itemscope itemtype="http://schema.org/WebSite">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Watch <%- details.name %> on AnimeEZ</title>
-<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE without any ADS" />
+<title>Watch <%- details.name %> on a2zAni.me</title>
+<meta name="description" content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE without any ADS" />
 <link rel="canonical" href="/" />
 <meta property='og:type' content='website' />
 <meta property='og:url' content='/' />
-<meta property='og:description' content="Watch best high-quality episodes in 720p, 1080p on AnimeEZ. Best of all you can Stream all anime for FREE" />
+<meta property='og:description' content="Watch best high-quality episodes in 720p, 1080p on a2zAni.me. Best of all you can Stream all anime for FREE" />
 <meta property="og:image" content="../../img/logo.png" />
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
 
@@ -16,12 +16,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="msapplication-TileColor" content="#201f1f" />
 <meta name="theme-color" content="#201f1f" />
-<link rel="stylesheet" href="https://animeez.tk/css/template.css">
-<link href="https://animeez.tk/css/css" rel="stylesheet" />
-<script src="https://animeez.tk/js/jquery-1.12.4.min.js"></script>
+<link rel="stylesheet" href="https://a2zAni.me/css/template.css">
+<link href="https://a2zAni.me/css/css" rel="stylesheet" />
+<script src="https://a2zAni.me/js/jquery-1.12.4.min.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://animeez.tk/js/js"></script>
+<script async src="https://a2zAni.me/js/js"></script>
 
 
 </head>
@@ -34,15 +34,15 @@
 		<div id="uk-main-nav" class="container w-full">
 			<div class="flex bod">
 				<div class="uk-navbar-left">
-					<a href="https://animeez.tk/" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://animeez.tk/img/logo.png" class="uk-svg" alt="AnimeEZ" title="AnimeEZ">
+					<a href="https://a2zAni.me/" class="uk-navbar-item uk-logo nuxt-link-exact-active nuxt-link-active"><img src="https://a2zAni.me/img/logo.png" class="uk-svg" alt="a2zAni.me" title="a2zAni.me">
 						<h2 class="is-shown-page-false" itemprop="headline">
-							<strong>AnimeEZ</strong>
+							<strong>a2zAni.me</strong>
 						</h2>
 					</a>
 
 					<ul class="uk-navbar-nav animate-me" id="mobilemenu">
 						<li>
-						<a href="https://animeez.tk" class="">Home</a>
+						<a href="https://a2zAni.me" class="">Home</a>
 						</li>
 						
 					</ul>
@@ -50,7 +50,7 @@
 			<div class="uk-navbar-right">
 				<ul class="uk-navbar-nav">
 					<li class="search-bar">
-				<form action="https://animeez.tk/search" method="get">
+				<form action="https://a2zAni.me/search" method="get">
 							<div id="searchx" class="auto-complete-cont searchx">
 								<div class="auto-complete form-inline animate-me" tabindex="-1" >								 
 								<input class="nav-search" placeholder="Search... " id="keyword" name="keyword" type="text" autocomplete="off" required>
@@ -82,7 +82,7 @@
 		</div>
 	</nav>
 					<li>
-						<a href="https://animeez.tk" class="searcho">
+						<a href="https://a2zAni.me" class="searcho">
 							<svg class="svg-inline--fa fa-search fa-w-16" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" data-fa-i2svg=""><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M208 80a128 128 0 1 1-90.51 37.49A127.15 127.15 0 0 1 208 80m0-80C93.12 0 0 93.12 0 208s93.12 208 208 208 208-93.12 208-208S322.88 0 208 0z"></path><path class="fa-primary" fill="currentColor" d="M504.9 476.7L476.6 505a23.9 23.9 0 0 1-33.9 0L343 405.3a24 24 0 0 1-7-17V372l36-36h16.3a24 24 0 0 1 17 7l99.7 99.7a24.11 24.11 0 0 1-.1 34z"></path></g>
 							</svg>
 						</a>
@@ -101,7 +101,7 @@
 			</div>
 		</div>
 	</nav>
-  <script src="https://animeez.tk/js/script.js"></script>
+  <script src="https://a2zAni.me/js/script.js"></script>
 <div class="uk-sticky-placeholder">
 </div>
 <div id="menu" class="">
@@ -111,7 +111,7 @@
 	</div>
 	<ul class="menu">
 		<li id="menu-item-18459" class="fa fa-home menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-18459">
-			<a href="https://animeez.tk/" aria-current="page">Home</a>
+			<a href="https://a2zAni.me/" aria-current="page">Home</a>
 		</li>
 
 
@@ -233,7 +233,7 @@
 	</section>
 	<section class="uk-background footer-bottom py-5">
 		<div class="uk-container text-sm uk-container-large flexo">
-			<div class="copyright"> Copyright © 2022 AnimeEZ, LLC. All Rights Reserved</div>
+			<div class="copyright"> Copyright © 2022 a2zAni.me, LLC. All Rights Reserved</div>
 		</div>
 	</section>
 </footer>	<!-- end footer --></div>
